--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,9 @@
     "angular-socket-io": "~0.7.0",
     "angular-ui-router": "~0.2.15",
     "angular-validation-match": "~1.5.2",
-    "angular-material": "~1.0.1"
+    "angular-material": "~1.0.1",
+    "angular-messages": "~1.4.8",
+    "angular-material-icons": "~0.6.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
